fixed a layout issue
managed to get label and their respective input boxes directly underneath each other

--- a/projects/sign-up-page/css/styles.css
+++ b/projects/sign-up-page/css/styles.css
@@ -46,6 +46,10 @@ p, h1, h2, h3, h4, h5, h6 {
 #root, #__next {
   isolation: isolate;
 }
+ul{
+  margin: 0;
+  padding: 0;
+}
 li {
     list-style: none;
 }
@@ -96,23 +100,52 @@ li {
 .sign-up-container {
     display: flex;
 
-    max-height: 100%;
+    height: 100%;
     flex-direction: row;
     justify-content: space-between;
+}
+.header{
+  align-self: center;
 }
 .sign-up-container > h6 {
     font-size: 2rem;
 }
 .sign-up-section {
     display: flex;
+    flex: 2 1 0;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
 }
+.password-criteria {
+  display: flex;
+}
+.form{
+  flex: 2 1 0;
+  display: flex;
+  justify-content: space-between;
+  width: 60%;
+  flex-direction: column;
+  justify-content: center;
+}
+form > div{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 form {
     display: flex;
+    justify-content: space-around;
     flex-direction: column;
-    justify-content: space-evenly;
+    height: 100%;
+}
+.pass-criteria > ul > li{
+font-size: 0.875rem;
+width: fit-content;
+}
+.pass-criteria > ul {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .img-section {
